--- a/HBcaoPopup.css
+++ b/HBcaoPopup.css
@@ -1,3 +1,9 @@
+#popup_box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 #mask_shadow {
   display: none;
   opacity: 0;
@@ -15,25 +21,23 @@
   opacity: 0;
   position: absolute;
   z-index: 2;
-  top: 150px;
   width: 600px;
-  height: 190px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 }
 
-#popup .title {
+#popup>.title {
   position: relative;
   width: 100%;
   height: 55px;
   cursor: move;
 }
 
-#popup .title p {
+#popup>.title p {
   padding-left: 14px;
   line-height: 55px;
 }
 
-#popup .title .close_box {
+#popup>.title .close_box {
   position: absolute;
   top: 12px;
   right: 20px;
@@ -43,17 +47,16 @@
   align-items: center;
 }
 
-#popup .title .close_box:hover {
+#popup>.title .close_box:hover {
   opacity: .8;
 }
 
-#popup .title svg {
+#popup>.title svg {
   width: 20px;
   height: 20px;
 }
 
-#popup .cont {
+#popup>.content {
   width: calc(100% - 40px);
-  height: 135px;
   padding: 20px;
 }
