--- a/HBcaoPopup.css
+++ b/HBcaoPopup.css
@@ -1,12 +1,17 @@
-#popup_box {
+.popup_box {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  opacity: 0;
 }
 
 #mask_shadow {
-  display: none;
-  opacity: 0;
   position: fixed;
   z-index: 1;
   left: 0;
@@ -17,8 +22,6 @@
 }
 
 #popup {
-  display: none;
-  opacity: 0;
   position: absolute;
   z-index: 2;
   width: 600px;
