--- a/HBcaoPopup.css
+++ b/HBcaoPopup.css
@@ -1,46 +1,43 @@
-.popup_box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: none;
+.popup-box {
+  outline: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  background: unset;
   opacity: 0;
+  -webkit-transition: opacity 2s ease-in;
+  -o-transition: opacity 2s ease-in;
+  transition: opacity .3s ease-in;
 }
 
-#mask_shadow {
+.popup-box[open] {
+  opacity: 1;
+}
+
+.popup-box .popup {
+  width: 400px;
   position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, .5);
-}
-
-#popup {
-  position: absolute;
-  z-index: 2;
-  width: 600px;
+  overflow: hidden;
+  background-color: #fff;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  padding: 0;
 }
 
-#popup>.title {
+.popup-box .popup>.popup-title-box {
   position: relative;
   width: 100%;
   height: 55px;
   cursor: move;
 }
 
-#popup>.title p {
+.popup-box .popup>.popup-title-box .popup-title {
   padding-left: 14px;
   line-height: 55px;
+  font-weight: bold;
+  user-select: none;
 }
 
-#popup>.title .close_box {
+.popup-box .popup>.popup-title-box .popup-close-btn {
   position: absolute;
   top: 12px;
   right: 20px;
@@ -50,16 +47,16 @@
   align-items: center;
 }
 
-#popup>.title .close_box:hover {
+.popup-box .popup>.popup-title-box .popup-close-btn:hover {
   opacity: .8;
 }
 
-#popup>.title svg {
+.popup-box .popup>.popup-title-box .popup-close-btn svg {
   width: 20px;
   height: 20px;
 }
 
-#popup>.content {
+.popup-box .popup>.popup-content {
   width: calc(100% - 40px);
   padding: 20px;
 }
